# cflora

./: .gitignore  .gitmodules  AUTHOR  LICENSE  README.md
conf/: farmos_gcg.ini  farmos_gos.ini
doc/: control_algorithm.md
gcg/: CMakeLists.txt
gcg/include/: gcg_base.h  gcg_config.h  gcg_connection.h  gcg_server.h
gcg/src/: CMakeLists.txt  gcg.cpp  gcg_config.cpp  gcg_connection.cpp  gcg_server.cpp
gcg/test/: CMakeLists.txt
gos/: CMakeLists.txt
gos/cmake/Modules/: FindMySQL.cmake
gos/include/: gos_base.h  gos_config.h  gos_connection.h  gos_device.h  gos_process.h  gos_rule.h  gos_server.h  gos_time.h  gos_vsensor.h
gos/src/: CMakeLists.txt  gos.cpp  gos_config.cpp  gos_connection.cpp  gos_device.cpp  gos_process.cpp  gos_rule.cpp  gos_server.cpp  gos_time.cpp  gos_vsensor.cpp
gos/test/: CMakeLists.txt  test_control.c
lib/libcflora/: CMakeLists.txt
lib/libcflora/include/: cf.h  cf_base.h  cf_config.h  cf_db_mysql.h  cf_msgbuf.h
lib/libcflora/src/: CMakeLists.txt  cf_base.c  cf_config.c  cf_db_mysql.c  cf_msgbuf.c
lib/libcflora/test/: test.h  test_config.c  test_control.c  test_db.c  test_msgbuf.c
scripts/: build.sh  clean.sh  farmos.sql  farmos_gcg  farmos_gcg.monit  farmos_gos  farmos_gos.monit  install.sh
