# Copyright © 2017-2018 JiNong Inc. All Rights Reserved.
# 기존 파일을 살짝 수정함

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (gcg)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_MACOSX_RPATH 1)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

find_package(Doxygen)
if(DOXYGEN_FOUND)
	add_custom_target(doc
			${DOXYGEN_EXECUTABLE} doc.src/doxy.conf
			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
			COMMENT "Generating API documentation with Doxygen" VERBATIM
			)
endif(DOXYGEN_FOUND)

find_package(Glog)
if(GLOG_FOUND)
    INCLUDE_DIRECTORIES (${GLOG_INCLUDE_DIR})
endif(GLOG_FOUND)

ADD_DEFINITIONS(-DUSE_GCG_HELPER -DLIBGCG_CFG_BUILD_MODE="${CMAKE_BUILD_TYPE}")
ADD_DEFINITIONS(-DUSE_MYSQL -fsigned-char -Wall -DLIBGCG_CFG_OS="${CMAKE_SYSTEM_NAME}" -DLIBGCG_CFG_CPU="${CMAKE_SYSTEM_PROCESSOR}")
ADD_DEFINITIONS(-DVERBOSE)

enable_testing ()
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

